# RLProject

./: .gitignore  .pre-commit-config.yaml  AB_experiment_heterogenou_effects_variables  LICENSE  mkdir.py  pyproject.toml  run.sh
src/abtests/: rl_experiments.py
src/data/: create_featurized_databases.py  create_intervention_database.py  create_intervention_database_daily.py  process.py
src/exploratory/: activation_heatmap.py  featurized_database_descriptive_analysis.ipynb  general_statistics.py  graph_plot.py  group_plot.py  group_statistics.py  interventions.py
src/models/: activation_regression.py  activation_regression_daily_outcome.py  group_featurized_model.py  svd.py
src/simulation/: generation.py  group_featurized_simulation.py  group_simulation.py  mle.py  zero_error_rate_simulation.py
src/utils/: general_utils.py
