[tool.poetry]
name = "RLProject"
version = "0.1.0"
description = ""
authors = ["Akira <akira.okuno@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pathlib = "^1.0.1"
pandas = "^1.5.0"
numpy = "^1.23.3"
matplotlib = "^3.6.0"
networkx = "^2.8.7"
tqdm = "^4.64.1"
DateTime = "^4.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
