[tool.poetry]
name = "RLProject"
version = "0.1.0"
description = ""
authors = ["Akira <akira.okuno@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pathlib = "^1.0.1"
pandas = "^1.5.0"
numpy = "^1.23.3"
matplotlib = "^3.6.0"
networkx = "^2.8.7"
tqdm = "^4.64.1"
DateTime = "^4.7"
sklearn = "^0.0"
statsmodels = "^0.13.2"
plotly = "^5.10.0"
kaleido = "0.2.1"
seaborn = "^0.12.0"
scipy = "^1.9.3"
surprise = "^0.1"
econml = "^0.14.0"
xgboost = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"
black = "^22.8.0"
isort = "^5.10.1"
pyproject-flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
profile = "black"

[tool.flake8]
max-line-length = 120
max-complexity = 20
exclude = ".git"
select = "B,C,E,F,W,T4,B9"
ignore = "E203, E266, E501, W503, F403, F401, E402"
